# content-understanting-demo

./: .env.template  .gitignore  README.md  __init__.py  content_understanding_client.py  create_audio.ipynb  pyproject.toml  requirements.txt  run_demo.bat  run_demo.sh  setup.py
evaluate/: evaluate_assessments.py  evaluation.py  example_evaluation.py
groundtruth/: geriartric.json  golf.json  mental.json  physical.json
prompts/: geriatic.txt  golf_coaching_prompt.txt  mental_health.txt  physical_health.txt  prompt.txt
scenarios/: audio_analysis_demo.py  batch_processing_demo.py  comprehensive_demo.py  document_analysis_demo.py  golf_coaching_assessment_demo.py  healthcare_assessment_demo.py  rag_integration_demo.py
utils/: assessment_processing.py  golf_analyzer.py  golf_coaching_utils.py  golf_demos.py  golf_models.py  healthcare_utils.py  utils.py
