[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-ml>=1.28.1",
    "azure-core>=1.35.0",
    "azure-identity>=1.24.0",
    "dotenv>=0.9.9",
    "ipython>=9.4.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
]
